--- a/styles/index.css
+++ b/styles/index.css
@@ -37,7 +37,6 @@ main {
   align-items: center;
   cursor: pointer;
   box-shadow: 0px 3.57447px 3.57447px rgba(0, 0, 0, 0.1);
-  background-color: white;
 }
 
 .die-num {
@@ -63,9 +62,9 @@ main {
 
 .roll-dice:focus {
   outline: none;
-} */
+}
 
- /* h1 {
+h1 {
   font-size: 40px;
   margin: 0;
 }
@@ -74,5 +73,4 @@ p {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   margin-top: 0;
-} */
-
+}
