--- a/styles/index.css
+++ b/styles/index.css
@@ -11,7 +11,7 @@ main {
   height: 400px;
   max-width: 800px;
   background-color: whitesmoke;
-  padding: 1rem;
+  padding: 10rem;
   margin-inline: auto;
   border-radius: 5px;
   display: flex;
@@ -46,11 +46,12 @@ main {
 
 .roll-dice {
   height: 50px;
-  width: 100px;
+  width: 120px;
   border: none;
   border-radius: 6px;
   background-color: #5035ff;
   color: white;
+  padding: 7px;
   cursor: pointer;
   font-size: 1.2rem;
   box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.18);
@@ -73,4 +74,12 @@ p {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   margin-top: 0;
+}
+
+.time {
+  padding-bottom: 190px;
+}
+
+.title-game {
+  padding-top: 180px;
 }
